syntax = "proto3";

import "file_transfer.proto";

option java_package = "com.github.crob1140.codewiz.battles";
option java_multiple_files = true;

service BattleEvaluator {
	rpc TransferCode(CodeTransferRequest) returns (CodeTransferResponse) {}
	rpc Compile(CompilationRequest) returns (CompilationResult){} // return result object with compilation errors, line numbers etc.
	rpc Evaluate(stream BattleRequest) returns (stream BattleAction){}
}

message RepoDetails {
	string domain = 1;
	string username = 2;
	string repository = 3;
	string branch = 4;
	string commit_hash = 5;
} 

message CodeTransferRequest {
	oneof transfer {
		UploadRequest upload_request = 1;
		RepoDetails repo_details = 2;
	}
}

message CodeTransferResponse {
	string id = 1;
}

message CompilationRequest {
	string id = 1;
}

message CompilationResult {
	message Success {}
	message Error {
		string file_name = 1;
		int32 line_number = 2;
		string message = 3;
	}
	message ErrorCollection {
		repeated Error errors = 1;
	}
	
	oneof result {
		Success success = 1;
		ErrorCollection errors = 2;
	}
}

message BattleRequest {
	oneof value {
		BattleDetails battle_details = 1;
		BattleEvent battle_event = 2;
	}	
}

message BattleDetails {
	message JavaSpecifics {
		string wizard_class = 1;
	}
	
	string code_id = 1;
	Contestant self = 2;
	repeated Contestant other_contestants = 3;
	oneof language_specifics {
		JavaSpecifics java_specifics = 4;
	}
}

message BattleEvent {
	message Idle {}
	message EnemySighted {
		string wizard_id = 1;
		Position position = 2;
	}

	oneof event {
		Idle idle = 1;
		EnemySighted enemy_sighted = 2;
	}
}

message BattleAction {
	message Move {
		float angle = 1;
		int32 amount = 2;
	}
	
	oneof action {
		Move move = 1;
	}
}

message Position {
	int32 x = 1;
	int32 y = 2;
}

message Contestant {
	UserDetails user = 1;
	WizardDetails wizard = 2;
}

message UserDetails {
	string id = 1;
	string username = 2;
}

message WizardDetails {
	string id = 1;
	string name = 2;
}